--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,10 @@
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "ejs": "^3.1.10",
+    "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^8.0.3",
+    "mongoose": "^8.20.4",
     "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
